[gd_scene load_steps=18 format=3 uid="uid://c4pnltqkwa20j"]

[ext_resource type="Script" path="res://scenes/main.gd" id="1_yugwm"]
[ext_resource type="PackedScene" uid="uid://bgn76dmrwwjl7" path="res://scenes/enemy.tscn" id="2_kyqkm"]
[ext_resource type="Texture2D" uid="uid://xtcfxh4p1xyc" path="res://sprites/tiles.png" id="3_safsw"]
[ext_resource type="PackedScene" uid="uid://ckkml6my1wkk6" path="res://scenes/player.tscn" id="4_wkwvu"]
[ext_resource type="Script" path="res://scenes/ui/health_container.gd" id="5_i1n5b"]
[ext_resource type="Texture2D" uid="uid://cinry3kc5mmfw" path="res://sprites/heart_full.png" id="6_f4rw2"]
[ext_resource type="Theme" uid="uid://cp2dw8jh1pmps" path="res://ui/theme.tres" id="6_rupnf"]
[ext_resource type="AudioStream" uid="uid://c3ebkqbf75lae" path="res://music/die_krypta.ogg" id="7_8djxl"]
[ext_resource type="PackedScene" uid="uid://dwbkolmyih02g" path="res://scenes/ui/menus/main_menu.tscn" id="7_mr1vb"]
[ext_resource type="PackedScene" uid="uid://b8aue815rv5va" path="res://scenes/ui/menus/options_menu.tscn" id="8_c260w"]
[ext_resource type="PackedScene" uid="uid://btptdcsf7o1lc" path="res://scenes/ui/menus/credits_menu.tscn" id="9_iidar"]
[ext_resource type="PackedScene" uid="uid://cpgmxhix5jqaa" path="res://scenes/ui/menus/game_over_menu.tscn" id="10_odyjr"]
[ext_resource type="PackedScene" uid="uid://cswjis18hols6" path="res://scenes/ui/menus/pause_menu.tscn" id="11_d13m3"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_qnd7i"]
texture = ExtResource("3_safsw")
texture_region_size = Vector2i(12, 12)
0:0/next_alternative_id = 8
0:0/0 = 0
0:0/1 = 1
0:0/1/flip_h = true
0:0/2 = 2
0:0/2/flip_v = true
0:0/3 = 3
0:0/3/flip_h = true
0:0/3/flip_v = true
0:0/4 = 4
0:0/4/transpose = true
0:0/5 = 5
0:0/5/flip_h = true
0:0/5/transpose = true
0:0/6 = 6
0:0/6/flip_v = true
0:0/6/transpose = true
0:0/7 = 7
0:0/7/flip_h = true
0:0/7/flip_v = true
0:0/7/transpose = true

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_gj7tq"]
texture = ExtResource("3_safsw")
margins = Vector2i(12, 0)
texture_region_size = Vector2i(12, 12)
0:0/next_alternative_id = 8
0:0/0 = 0
0:0/1 = 1
0:0/1/flip_h = true
0:0/2 = 2
0:0/2/flip_v = true
0:0/3 = 3
0:0/3/flip_h = true
0:0/3/flip_v = true
0:0/4 = 4
0:0/4/transpose = true
0:0/5 = 5
0:0/5/flip_h = true
0:0/5/transpose = true
0:0/6 = 6
0:0/6/flip_v = true
0:0/6/transpose = true
0:0/7 = 7
0:0/7/flip_h = true
0:0/7/flip_v = true
0:0/7/transpose = true

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_f4g2s"]
texture = ExtResource("3_safsw")
margins = Vector2i(24, 0)
texture_region_size = Vector2i(12, 12)
0:0/next_alternative_id = 8
0:0/0 = 0
0:0/1 = 1
0:0/1/flip_h = true
0:0/2 = 2
0:0/2/flip_v = true
0:0/3 = 3
0:0/3/flip_h = true
0:0/3/flip_v = true
0:0/4 = 4
0:0/4/transpose = true
0:0/5 = 5
0:0/5/flip_h = true
0:0/5/transpose = true
0:0/6 = 6
0:0/6/flip_v = true
0:0/6/transpose = true
0:0/7 = 7
0:0/7/flip_h = true
0:0/7/flip_v = true
0:0/7/transpose = true

[sub_resource type="TileSet" id="4"]
tile_size = Vector2i(12, 12)
sources/0 = SubResource("TileSetAtlasSource_qnd7i")
sources/1 = SubResource("TileSetAtlasSource_gj7tq")
sources/2 = SubResource("TileSetAtlasSource_f4g2s")

[node name="Main" type="Node2D" node_paths=PackedStringArray("player", "tile_map", "health_map")]
script = ExtResource("1_yugwm")
room_count = 10
room_width_min = 2
room_height_min = 2
room_width_max = 7
room_height_max = 7
room_enemy_min = 3
room_enemy_max = 5
enemy_scene = ExtResource("2_kyqkm")
player = NodePath("Player")
tile_map = NodePath("TileMap")
health_map = NodePath("")

[node name="TileMap" type="TileMap" parent="."]
z_index = -4
position = Vector2(6, 6)
tile_set = SubResource("4")
format = 2

[node name="Player" parent="." node_paths=PackedStringArray("main", "tile_map") instance=ExtResource("4_wkwvu")]
visible = false
main = NodePath("..")
tile_map = NodePath("../TileMap")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HealthContainer" type="HBoxContainer" parent="CanvasLayer" node_paths=PackedStringArray("health_icon_template")]
offset_left = 16.0
offset_top = 16.0
offset_right = 56.0
offset_bottom = 56.0
size_flags_horizontal = 0
size_flags_vertical = 0
script = ExtResource("5_i1n5b")
health_icon_template = NodePath("HealthIconTemplate")

[node name="HealthIconTemplate" type="TextureRect" parent="CanvasLayer/HealthContainer"]
visible = false
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
texture = ExtResource("6_f4rw2")

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("6_rupnf")

[node name="MainMenu" parent="CanvasLayer/MarginContainer" instance=ExtResource("7_mr1vb")]
visible = false
layout_mode = 2

[node name="OptionsMenu" parent="CanvasLayer/MarginContainer" instance=ExtResource("8_c260w")]
visible = false
layout_mode = 2

[node name="CreditsMenu" parent="CanvasLayer/MarginContainer" instance=ExtResource("9_iidar")]
visible = false
layout_mode = 2

[node name="GameOverMenu" parent="CanvasLayer/MarginContainer" instance=ExtResource("10_odyjr")]
visible = false
layout_mode = 2

[node name="PauseMenu" parent="CanvasLayer/MarginContainer" instance=ExtResource("11_d13m3")]
visible = false
layout_mode = 2

[node name="Music" type="AudioStreamPlayer" parent="."]
process_mode = 3
stream = ExtResource("7_8djxl")
autoplay = true

[connection signal="died" from="Player" to="CanvasLayer/MarginContainer/GameOverMenu" method="_on_player_died"]
[connection signal="health_changed" from="Player" to="CanvasLayer/HealthContainer" method="_on_player_health_changed"]
[connection signal="moved" from="Player" to="." method="_on_player_moved"]
[connection signal="won" from="Player" to="CanvasLayer/MarginContainer/GameOverMenu" method="_on_player_won"]
[connection signal="credits_pressed" from="CanvasLayer/MarginContainer/MainMenu" to="CanvasLayer/MarginContainer/CreditsMenu" method="open"]
[connection signal="options_pressed" from="CanvasLayer/MarginContainer/MainMenu" to="CanvasLayer/MarginContainer/OptionsMenu" method="open"]
[connection signal="play_pressed" from="CanvasLayer/MarginContainer/MainMenu" to="." method="_on_main_menu_play_pressed"]
[connection signal="play_pressed" from="CanvasLayer/MarginContainer/MainMenu" to="CanvasLayer/MarginContainer/PauseMenu" method="_on_main_menu_play_pressed"]
[connection signal="menu_pressed" from="CanvasLayer/MarginContainer/GameOverMenu" to="CanvasLayer/MarginContainer/MainMenu" method="open"]
[connection signal="opened" from="CanvasLayer/MarginContainer/GameOverMenu" to="CanvasLayer/MarginContainer/PauseMenu" method="_on_game_over_menu_opened"]
[connection signal="menu_pressed" from="CanvasLayer/MarginContainer/PauseMenu" to="CanvasLayer/MarginContainer/MainMenu" method="open"]
[connection signal="options_pressed" from="CanvasLayer/MarginContainer/PauseMenu" to="CanvasLayer/MarginContainer/OptionsMenu" method="open"]
